RDCC-3010: fixing no param passed scenario, addressing review comments